<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_pregunta1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta1"
                android:textSize="21sp"
                android:textColor="@color/md_text"/>

            <Spinner
                android:id="@+id/spi_pregunta1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_pregunta1" />

            <TextView
                android:id="@+id/tv_pregunta2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta2"
                android:layout_below="@+id/spi_pregunta1"
                android:textColor="@color/md_text"
                android:textSize="21sp" />

            <Spinner
                android:id="@+id/spi_pregunta2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_pregunta2" />

            <TextView
                android:id="@+id/tv_pregunta3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta3"
                android:layout_below="@+id/spi_pregunta2"
                android:textColor="@color/md_text"
                android:textSize="21sp" />

            <Spinner
                android:id="@+id/spi_pregunta3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_pregunta3" />

            <TextView
                android:id="@+id/tv_pregunta4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta4"
                android:layout_below="@+id/spi_pregunta3"
                android:textColor="@color/md_text"
                android:textSize="21sp" />

            <Spinner
                android:id="@+id/spi_pregunta4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_pregunta4" />

            <TextView
                android:id="@+id/tv_pregunta5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta5"
                android:layout_below="@+id/spi_pregunta4"
                android:textColor="@color/md_text"
                android:textSize="21sp" />

            <Spinner
                android:id="@+id/spi_pregunta5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_pregunta5" />

            <TextView
                android:id="@+id/tv_pregunta6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta6"
                android:layout_below="@+id/spi_pregunta5"
                android:textColor="@color/md_text"
                android:textSize="21sp" />

            <Spinner
                android:id="@+id/spi_pregunta6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_pregunta6" />

            <TextView
                android:id="@+id/tv_pregunta7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta7"
                android:layout_below="@+id/spi_pregunta6"
                android:textColor="@color/md_text"
                android:textSize="21sp" />

            <Spinner
                android:id="@+id/spi_pregunta7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_pregunta7" />

            <TextView
                android:id="@+id/tv_pregunta8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta8"
                android:layout_below="@+id/spi_pregunta7"
                android:textColor="@color/md_text"
                android:textSize="21sp" />

            <Spinner
                android:id="@+id/spi_pregunta8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_pregunta8" />

            <TextView
                android:id="@+id/tv_pregunta9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta9"
                android:layout_below="@+id/spi_pregunta8"
                android:textColor="@color/md_text"
                android:textSize="21sp" />

            <Spinner
                android:id="@+id/spi_pregunta9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_pregunta9" />

            <TextView
                android:id="@+id/tv_pregunta10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta10"
                android:layout_below="@+id/spi_pregunta9"
                android:textColor="@color/md_text"
                android:textSize="21sp" />

            <Spinner
                android:id="@+id/spi_pregunta10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_pregunta10" />

            <TextView
                android:id="@+id/tv_pregunta11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta11"
                android:layout_below="@+id/spi_pregunta10"
                android:textColor="@color/md_text"
                android:textSize="21sp" />

            <Spinner
                android:id="@+id/spi_pregunta11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_pregunta11" />

            <TextView
                android:id="@+id/tv_pregunta12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta12"
                android:layout_below="@+id/spi_pregunta11"
                android:textColor="@color/md_text"
                android:textSize="21sp" />

            <Spinner
                android:id="@+id/spi_pregunta12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_pregunta12" />

            <TextView
                android:id="@+id/tv_sugerencias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sugerencias"
                android:layout_below="@+id/spi_pregunta12"
                android:textColor="@color/md_text"
                android:textSize="21sp" />

            <EditText
                android:id="@+id/et_sugerencias"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/tv_sugerencias"/>

            <LinearLayout
                android:id="@+id/linearLayout13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_sugerencias">


                <Button
                    android:id="@+id/bt_enviar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/precisonres"
                    android:layout_centerInParent="true"
                    android:text="@string/st_btEnviar"
                    android:layout_weight="2" />

                <Button
                    android:id="@+id/bt_ver"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/bt_enviar"
                    android:layout_centerInParent="true"
                    android:text="@string/st_btVer"
                    android:layout_weight="2" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</LinearLayout>